--- a/page11.html
+++ b/page11.html
@@ -87,9 +87,9 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="features6 start cid-ubiPMA5WKU" id="features06-4c">
+<section data-bs-version="5.1" class="features6 start cid-ubiPMA5WKU mbr-parallax-background" id="features06-4c">
 	
-	
+	<div class="mbr-overlay"></div>
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 content-head">
@@ -179,9 +179,9 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="features6 start cid-ueB0fZ4TR4" id="features06-90">
+<section data-bs-version="5.1" class="features6 start cid-ueB0fZ4TR4 mbr-parallax-background" id="features06-90">
 	
-	
+	<div class="mbr-overlay"></div>
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 content-head">
@@ -324,7 +324,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(169, 129, 164);"></div>
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(12, 44, 104);"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 content-head">
@@ -436,7 +436,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
