--- a/page11.html
+++ b/page11.html
@@ -102,7 +102,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="item features-image col-12 col-md-6 col-lg-4 active">
+			<div class="item features-image col-12 col-md-6 col-lg-6 active">
 				<div class="item-wrapper">
 					<div class="item-img">
 						<img src="assets/images/gambar-whatsapp-2024-04-22-pukul-07.00.08-e768f49d-770x347.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 			
-			<div class="item features-image col-12 col-md-6 col-lg-4">
+			<div class="item features-image col-12 col-md-6 col-lg-6">
 				<div class="item-wrapper">
 					<div class="item-img">
 						<img src="assets/images/img-20240423-wa0048-01.jpeg-1280x576.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6">
@@ -131,7 +131,7 @@
 						
 					</div>
 				</div>
-			</div><div class="item features-image col-12 col-md-6 col-lg-4">
+			</div><div class="item features-image col-12 col-md-6 col-lg-6">
 				<div class="item-wrapper">
 					<div class="item-img">
 						<img src="assets/images/img-20240423-wa0030-01.jpeg-1040x780.jpg" alt="Mobirise Website Builder" data-slide-to="8" data-bs-slide-to="8">
@@ -145,7 +145,7 @@
 						
 					</div>
 				</div>
-			</div><div class="item features-image col-12 col-md-6 col-lg-4">
+			</div><div class="item features-image col-12 col-md-6 col-lg-6">
 				<div class="item-wrapper">
 					<div class="item-img">
 						<img src="assets/images/gambar-whatsapp-2024-04-29-pukul-11.01.29-4c338533-1040x468.jpg" alt="Mobirise Website Builder" data-slide-to="12" data-bs-slide-to="12">
@@ -436,7 +436,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
